# Resume-Agent

./: .dockerignore  .env  .env.example  .gitignore  CONFIGURATION.md  Command to run.md  Dockerfile  LLM_CONFIGURATION.md  README.md  SKILLS_TEMPLATE_GUIDE.md  SYSTEM:.md  System Design.md  api.py  docker-compose.yml  jd.txt  profile.json  profile.json.example  pyproject.toml  tailor.py  testcase_1_expected.txt  testcase_1_output.txt
SWE_Resume_Template/: custom-commands.tex  resume.tex
SWE_Resume_Template/src/: achievements.tex  education.tex  experience.tex  heading.tex  projects.tex  skills.tex
SWE_Resume_Template/templates/: education_format.tex  heading_format.tex  projects_format.tex  skills_format.tex
resume_agent/: compile.py  config.py  graph.py  profile.py  prompts.py  report.py  star.py  tex.py  tools.py  utils.py
tests/: test_profile.py  test_skills_generation.py  test_tex.py
